actualized prisma mongo

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://mauricioorozcomoc:5l3Z95mpd2sCLTEB@users.0wl8x.mongodb.net/Users?retryWrites=true&w=majority&appName=Users"
+DATABASE_URL="mongodb+srv://dulcemariadlth:v3ZxEaMDOZpltIag@users.yeqv9.mongodb.net/Users?retryWrites=true&w=majority&appName=Users"
