--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "node --watch server.js"  
+    "dev": "nodemon"
   },
   "author": "Mauricio Orozco",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "mongodb": "^6.8.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "prisma": "^5.18.0"
   }
 }
